--- a/assets/default.cfg
+++ b/assets/default.cfg
@@ -48,9 +48,9 @@ r_enableValidationLayer = false
 ###################################
 ### Scenes
 ###################################
-#g_LoadScene = scenes/emissive.yaml
+g_LoadScene = scenes/emissive.yaml
 #g_LoadScene = scenes/vkscene.yaml
-g_LoadScene = scenes/sponza.yaml
+#g_LoadScene = scenes/sponza.yaml
 #g_LoadScene = scenes/bistro.yaml
 #g_LoadScene = scenes/empty.yaml
 
